syntax = "proto3";

package api.blog.v1;

option go_package = "blog/api/blog/v1;v1";
option java_multiple_files = true;
option java_package = "api.blog.v1";

service Post {
    rpc CreatePost (CreatePostRequest) returns (CreatePostReply);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostReply);
    rpc DeletePost (DeletePostRequest) returns (DeletePostReply);
    rpc GetPost (GetPostRequest) returns (GetPostReply);
    rpc ListPost (ListPostRequest) returns (ListPostReply);
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
}
message CreatePostReply {}

message UpdatePostRequest {}
message UpdatePostReply {}

message DeletePostRequest {}
message DeletePostReply {}

message GetPostRequest {}
message GetPostReply {}

message ListPostRequest {}
message ListPostReply {}